<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input"
            android:hint="@string/namapelangganmain"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvpelanggan"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pelangganmain"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipePelangganGold"
            android:paddingHorizontal="20dp"/>

        <RadioButton
            android:id="@+id/rbSilver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipePelangganSilver"
            android:paddingHorizontal="20dp"/>

        <RadioButton
            android:id="@+id/rbBiasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipePelangganBiasa"
            android:paddingHorizontal="20dp"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKodeBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:text="@string/input"
            android:hint="@string/KodeBarang"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJumlahBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input"
            android:hint="@string/JumlahBarang"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnPesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pesan"
        android:layout_marginTop="30dp"/>



</LinearLayout>